--- a/404.html
+++ b/404.html
@@ -37,6 +37,38 @@
 <meta itemprop="description" content="">
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<link
+  rel="apple-touch-icon"
+  sizes="180x180"
+  href="https://flnguyen03.github.io/fmbarberwebsite2/images/apple-touch-icon.png"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="32x32"
+  href="https://flnguyen03.github.io/fmbarberwebsite2/images/favicon-32x32.png"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="16x16"
+  href="https://flnguyen03.github.io/fmbarberwebsite2/images/favicon-16x16.png"
+/>
 <body>
   <main class="content page-template 404" role="main">
     <article class="post page">
