--- a/services/index.html
+++ b/services/index.html
@@ -54,6 +54,38 @@ Nutrition Coaching This is not an easy task. You will likely have to pay money f
 <meta itemprop="keywords" content="" />
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<link
+  rel="apple-touch-icon"
+  sizes="180x180"
+  href="https://flnguyen03.github.io/fmbarberwebsite2/images/apple-touch-icon.png"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="32x32"
+  href="https://flnguyen03.github.io/fmbarberwebsite2/images/favicon-32x32.png"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="16x16"
+  href="https://flnguyen03.github.io/fmbarberwebsite2/images/favicon-16x16.png"
+/>
 <body>
   <main class="content page-template page-">
     <article class="post page">
