--- a/services/index.html
+++ b/services/index.html
@@ -29,7 +29,9 @@
 It carries a lot more detail than what I put on the homepage - I swear!
 You want to know what I can do for you?
 Well, let me tell ya!
-Nutrition Coaching This is not an easy task. You will likely have to pay money for this. You know what - let us look at a nice picture first." />
+Barber Let us look at a nice picture first.
+Wow. That was nice, right? Well, call me and let us talk.
+Hairstyle Consulting Did you see the picture above? I can show you how to go from" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://flnguyen03.github.io/fmbarberwebsite2/services/" /><meta property="article:section" content="" />
 
@@ -41,16 +43,20 @@ Nutrition Coaching This is not an easy task. You will likely have to pay money f
 It carries a lot more detail than what I put on the homepage - I swear!
 You want to know what I can do for you?
 Well, let me tell ya!
-Nutrition Coaching This is not an easy task. You will likely have to pay money for this. You know what - let us look at a nice picture first."/>
+Barber Let us look at a nice picture first.
+Wow. That was nice, right? Well, call me and let us talk.
+Hairstyle Consulting Did you see the picture above? I can show you how to go from"/>
 
 <meta itemprop="name" content="Services">
 <meta itemprop="description" content="This is a page about the services, which I offer.
 It carries a lot more detail than what I put on the homepage - I swear!
 You want to know what I can do for you?
 Well, let me tell ya!
-Nutrition Coaching This is not an easy task. You will likely have to pay money for this. You know what - let us look at a nice picture first.">
+Barber Let us look at a nice picture first.
+Wow. That was nice, right? Well, call me and let us talk.
+Hairstyle Consulting Did you see the picture above? I can show you how to go from">
 
-<meta itemprop="wordCount" content="133">
+<meta itemprop="wordCount" content="113">
 <meta itemprop="keywords" content="" />
 
 
@@ -99,10 +105,10 @@ Nutrition Coaching This is not an easy task. You will likely have to pay money f
 <p>You want to know what I can do for you?</p>
 <p>Well, let me tell ya!</p>
 <hr>
-<h2 id="nutrition-coaching">Nutrition Coaching</h2>
-<p>This is not an easy task. You will likely have to pay money for this. You know what - let us look at a nice picture first.</p>
+<h2 id="barber">Barber</h2>
+<p>Let us look at a nice picture first.</p>
 <p><img src="../images/IMG_8847(1).jpg" alt="Nice picture to make you pay me ;-)"></p>
-<p>Wow. That was nice, right? Well, call me and let us talk.</p>
+<p>Wow. That was nice, right? Well, <a href="contact">call me and let us talk</a>.</p>
 <hr>
 <h2 id="hairstyle-consulting">Hairstyle Consulting</h2>
 <p>Did you see the picture above? I can show you how to go from</p>
