--- a/services/index.html
+++ b/services/index.html
@@ -29,9 +29,9 @@
 It carries a lot more detail than what I put on the homepage - I swear!
 You want to know what I can do for you?
 Well, let me tell ya!
-Barber Let us look at a nice picture first.
+Barber Service Let us look at a nice picture first.
 Wow. That was nice, right? Well, call me and let us talk.
-Hairstyle Consulting Did you see the picture above? I can show you how to go from" />
+Hairstyle Consulting Did you see the picture above?" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://flnguyen03.github.io/fmbarberwebsite2/services/" /><meta property="article:section" content="" />
 
@@ -43,20 +43,20 @@ Hairstyle Consulting Did you see the picture above? I can show you how to go fro
 It carries a lot more detail than what I put on the homepage - I swear!
 You want to know what I can do for you?
 Well, let me tell ya!
-Barber Let us look at a nice picture first.
+Barber Service Let us look at a nice picture first.
 Wow. That was nice, right? Well, call me and let us talk.
-Hairstyle Consulting Did you see the picture above? I can show you how to go from"/>
+Hairstyle Consulting Did you see the picture above?"/>
 
 <meta itemprop="name" content="Services">
 <meta itemprop="description" content="This is a page about the services, which I offer.
 It carries a lot more detail than what I put on the homepage - I swear!
 You want to know what I can do for you?
 Well, let me tell ya!
-Barber Let us look at a nice picture first.
+Barber Service Let us look at a nice picture first.
 Wow. That was nice, right? Well, call me and let us talk.
-Hairstyle Consulting Did you see the picture above? I can show you how to go from">
+Hairstyle Consulting Did you see the picture above?">
 
-<meta itemprop="wordCount" content="113">
+<meta itemprop="wordCount" content="114">
 <meta itemprop="keywords" content="" />
 
 
@@ -105,10 +105,10 @@ Hairstyle Consulting Did you see the picture above? I can show you how to go fro
 <p>You want to know what I can do for you?</p>
 <p>Well, let me tell ya!</p>
 <hr>
-<h2 id="barber">Barber</h2>
+<h2 id="barber-service">Barber Service</h2>
 <p>Let us look at a nice picture first.</p>
 <p><img src="../images/IMG_8847(1).jpg" alt="Nice picture to make you pay me ;-)"></p>
-<p>Wow. That was nice, right? Well, <a href="contact">call me and let us talk</a>.</p>
+<p>Wow. That was nice, right? Well, <a href="Contact">call me and let us talk</a>.</p>
 <hr>
 <h2 id="hairstyle-consulting">Hairstyle Consulting</h2>
 <p>Did you see the picture above? I can show you how to go from</p>
