--- a/services/index.html
+++ b/services/index.html
@@ -108,7 +108,7 @@ Hairstyle Consulting Did you see the picture above?">
 <h2 id="barber-service">Barber Service</h2>
 <p>Let us look at a nice picture first.</p>
 <p><img src="../images/IMG_8847(1).jpg" alt="Nice picture to make you pay me ;-)"></p>
-<p>Wow. That was nice, right? Well, <a href="%5Chomepage%5Ccontact">call me and let us talk</a>.</p>
+<p>Wow. That was nice, right? Well, <a href="https://flnguyen03.github.io/fmbarberwebsite2/#contact">call me and let us talk</a>.</p>
 <hr>
 <h2 id="hairstyle-consulting">Hairstyle Consulting</h2>
 <p>Did you see the picture above? I can show you how to go from</p>
